# RoboticsPart1

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Construction_Site_State_Platform_Initial_Deliverable_Proposal_v0.1.docx  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  data-reference.md  deployment.md  sota-review.md
examples/: custom_asset_tracking.py  demo_two_missions.py
src/sitestate/: __init__.py  benchmark.py  cli.py  demo.py  planning.py  platform.py  query.py  review.py  serve.py
src/sitestate/core/: __init__.py  entities.py
src/sitestate/design/: __init__.py  floorplan.py  zones.py
src/sitestate/ingest/: __init__.py  replay.py
src/sitestate/ledger/: __init__.py  ledger.py
src/sitestate/outputs/: __init__.py  costmap_export.py  html_report.py  json_export.py  png.py  scenegraph_export.py  svg.py
src/sitestate/plugins/: __init__.py  base.py  registry.py
src/sitestate/processing/: __init__.py  change.py  coverage.py  grid.py  icp.py  mapping.py  plan_compare.py  progress.py  qa.py  refine.py  registration.py  semantics.py  traversability.py
src/sitestate/sensors/: __init__.py  sim.py  world.py
src/sitestate/statemodel/: __init__.py  model.py
tests/: conftest.py  test_end_to_end.py  test_full_vision.py  test_v1_features.py  test_v2_features.py
