[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sitestate"
version = "2.0.0"
description = "Site State Platform: plug-and-play sensing to a versioned, uncertainty-aware site model"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
sitestate = "sitestate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
